--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,103 +1,60 @@
- .u-section-1 {
-  background-image: url("../images/pexels-photo-1372971-Recovered.jpg");
-  background-position: 50% 100%;
+body {
+  font-family: "Arial", sans-serif;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #ffa07a; /* Warna orange cerah */
+  color: #333;
 }
 
-.u-section-1 .u-sheet-1 {
-  min-height: 710px;
-}
-
-.u-section-1 .u-group-1 {
-  width: 482px;
-  min-height: 531px;
-  margin: 60px auto;
-}
-
-.u-section-1 .u-container-layout-1 {
-  padding: 20px;
-}
-
-.u-section-1 .u-text-1 {
-  font-weight: 700;
-  font-size: 1.875rem;
-  margin: 0 auto;
-}
-
-.u-section-1 .u-form-1 {
-  height: 351px;
-  background-image: none;
-  margin-top: 20px;
-  margin-bottom: 0;
-  margin-left: 0;
-}
-
-.u-section-1 .u-input-1 {
-  background-image: none;
-}
-
-.u-section-1 .u-input-2 {
-  background-image: none;
-}
-
-.u-section-1 .u-btn-1 {
-  background-image: none;
-  border-style: none;
+.container {
   width: 100%;
-  padding: 10px 0;
+  max-width: 400px;
 }
 
-.u-section-1 .u-btn-2 {
-  align-self: center;
-  border-style: none;
-  margin: 13px auto 0;
-  padding: 0;
+.card {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.u-section-1 .u-btn-3 {
-  border-style: none;
-  margin: 20px auto 0;
-  padding: 0;
+h2 {
+  text-align: center;
+  color: #333;
 }
 
-@media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 585px;
-  }
-
-  .u-section-1 .u-form-1 {
-    margin-left: initial;
-  }
+form {
+  display: flex;
+  flex-direction: column;
 }
 
-@media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 448px;
-  }
+input {
+  padding: 10px;
+  margin-bottom: 12px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  transition: border-color 0.3s ease-in-out;
+  outline: none;
+  color: #333;
 }
 
-@media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 336px;
-  }
-
-  .u-section-1 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+input:focus {
+  border-color: #ff8c00; /* Warna orange saat focus */
 }
 
-@media (max-width: 575px) {
-   .u-section-1 {
-    background-position: 6.25% 100%;
-  }
+button {
+  background-color: #ff8c00; /* Warna orange cerah */
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
 
-  .u-section-1 .u-sheet-1 {
-    min-height: 651px;
-  }
-
-  .u-section-1 .u-group-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
+button:hover {
+  background-color: #ff7f00; /* Warna orange sedikit lebih gelap saat hover */
 }
